# AI_Matching_Job

./: .env.example  .gitignore  BATCH_PROCESSOR_SETUP.md  CODEX_PROMPT_ARCHITECTURE_Q1_Q4.md  CODEX_PROMPT_GROQ_INTEGRATION.md  Curriculo_Clássico_Executivo.docx  Curriculo_Moderno_Corporativo.docx  FRONTEND_STATUS.md  INFRASTRUCTURE_RUNBOOK - Copia.md  LinkedIn Processor - Scalable (5) - Copia.json  Optimized_Job_Matcher_Workflow.json  PROJECT_PLAN.md  QUICK_START.md  README.md  SOLUTION_ARCHITECTURE.md  capgemini_jobs.txt  check_excel.py  dashboard.py  docker-compose.postgres.yml  docker-compose.yml  import_jobs_smart.py  import_sheets_to_postgres.py  premium_cv_generator.py  process_jobs.bat  reprocess_scored_jobs.py  run_batch_score.py  start.bat  stop.bat
CV/: ANALYSIS_REPORT_CV_vs_Insurer_JD.md  (+14 more)
backend/: .dockerignore  .env.example  Dockerfile  candidate_resume.txt  init.sql  processo classificacao.md  pyproject.toml  requirements.txt
backend/app/: db.py  main.py
backend/app/routes/: audit.py  candidates.py  cv.py  jobs.py  notifications.py  scoring.py  settings.py  stats.py
backend/app/services/: alerts.py  cv_enhancer.py  drive_service.py  export_service.py  job_scraper.py  premium_export.py  scheduler.py
backend/migrations/: 001_add_version_cv_versions_audit_log.sql  001_cv_audit_tables.sql  002_candidates_columns.sql  003_settings_table.sql  004_drive_url_column.sql  005_detailed_score_column.sql
backend/tests/: test_cv_enhancer.py  test_cv_integration.py  test_jobs_quick_add.py  test_new_features.py  test_premium_export_v2.py  test_scoring_contract.py
(+93 files in other folders)
