[project]
name = "job-matcher-backend"
version = "0.1.0"
description = "FastAPI backend for AI Job Matcher dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "google-generativeai>=0.8.0",
]
